# whisper_ggml_plus

./: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: release.yml
android/: build.gradle
android/src/whisper/: CMakeLists.txt  main.cpp
example/: README.md
example/android/app/: build.gradle
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc
ios/: whisper_ggml_plus.podspec
ios/Classes/: whisper_flutter_plus.cpp
lib/src/: bundled_vad_model_resolver.dart  whisper.dart  whisper_controller.dart
lib/src/models/: _models.dart
lib/src/models/requests/: transcribe_request.dart  transcribe_request.freezed.dart  transcribe_request_dto.dart  transcribe_request_dto.freezed.dart  transcribe_request_dto.g.dart  whisper_vad_mode.dart
macos/Classes/: whisper_ggml.cpp
windows/: CMakeLists.txt  whisper_ggml_plus.cpp  whisper_ggml_plus.h
windows/Classes/: whisper_ggml.cpp  whisper_ggml.h
